# fruithunter

./: .gitattributes  .gitignore  README.md  environment.yml  setup.py
conda/: env.yml
example/: Analysis - Harvest & Labeled Data.ipynb  Analysis - Harvest data & Automatic Measurements.ipynb  Analysis - Synthetic data.ipynb
machine_learning/: ModelClassifier.py  NNClassifier.py  RFClassifier.py  myio.py  predict.py  train.py
notebook/: data.tar.xz  fruithunter.ipynb  predict.ipynb  restoreData.py
paper002/: 230208_pointcloud_densities.ipynb  AppleAndNonApple.ipynb  Density.ipynb  DensityComparison.ipynb  DensityRealData.ipynb  DensitySyntheticData.ipynb  Untitled.ipynb  algorithm.py  binarise_rf_prediction.py  jitter_densities.json  paper002.ipynb  pc_downsampling.py  pointCloudsDescriptor.py  prediction_metrics.ipynb  raywidth_densities.json
pcl/: CMakeLists.txt  clustering.py  feature.cpp  io.cpp  launcher.py  segmentation.cpp
pcl/include/: io.hpp
pointnet/: gen_indoor3d_h5.py  indoor3d_util.py  mean_data.txt  model.py  my_model.py  normalization_min_max.py  organise_apple_tree.py  provider.py  test_3d_windows.py  train_test_evaluate.py
post_processing/: algorithm.py  analysis.py  config.py  main_clustering.py  main_field.py  main_synthetic.py  myio.py  prepare_data.py  r2.py
randlanet/: RandLANet.py  convert_to_ply.py  helper_tool.py  launcher_apple_trees.py  main.py  main_apple_tree.py  tester_Semantic3D.py
result/: main.py
script/: closest_distance_mean.py  convert_dataset_to_npy.py  count_apple.py  geometric_feature.py  npy_converter.py  (+4 more)
(+43 files in other folders)
